ProgramTests/Invalid_Tests/invalid_main.decaf

def bool main() {
    return true;
}